2003/12/14 17:16 (-0500) muppetman

	* xs/GtkTreeModel.xs, AUTHORS: patch from Roderich Schupp implements
	a custom marshaler for the rows-reordered signal.  applied with small
	changes.

	* xs/GtkTreeModel.xs: implement the old FIXMEd rows_reordered method.

	* xs/GtkTreeStore.xs: off-by-one error in reorder().  changed loop
	logic to be a little clearer at the expense of an extra iterator var.

	* t/22.GtkListStore.t, t/23.GtkTreeStore.t: add code to test the
	rows-reordered signal and rows_reordered method.  also removed the
	init_check guards on these two, because they don't need a display
	to run their tests.

2003/12/14 17:16 (-0500) muppetman

	* t/paned.t: wait for size-allocate instead of using timeouts... still
	trying to get this test to be robust.

2003/12/14 20:12 (+0100) kaffeetisch

	* xs/GtkTreeModel.xs: Fix a slight glitch in the API doc of
	gtk_tree_model_get.

2003/12/12 11:39 (-0500) muppetman

	* xs/GtkWidget.xs: alias values in get_flags got changed, but the
	switches on ix were not updated, leading to bugs whenever apps tried
	to read or write flag values.  fixed.  renamed get_flags to
	flags_handler (it's hidden from API docs), and created a new xsub
	named flags (aliased to get_flags) as a binding for GTK_WIDGET_FLAGS.

	A t/01.GtkWidget.t
	* MANIFEST: new test, an attempt to catch future flags regressions.

2003/12/11 18:01 (-0500) rwmcfa1

	* tools/podifystockitems.pl: was doing Gtk2 '-init' no reason to and it
	caused build (of doc) to fail when no display is set.

2003/12/11 16:53 (-0500) muppetman

	* t/27.GtkClipboard.t, t/30.GtkCellRenderer.t, t/text-iter-searches.t:
	these didn't skip all tests when there is no display, making builds
	fail on headless build servers.  it would be nice to wrap up some of
	this testing boilerplate a bit more.

2003/12/08 13:47 (-0500) rwmcfa1

	* t/paned.t: use strict and use warnings

	* xs/GtkLabel.xs, xs/GtkSizeGroup.xs, xs/GtkStock.xs: apidoc, added 
	enum(s)

2003/12/08 11:14 (-0500) muppetman
